--- a/.d/.stl.d/.stldrc
+++ b/.d/.stl.d/.stldrc
@@ -111,10 +111,11 @@ dotstldrc_boot_stl() {
             item_ext="${item##*.}"
             file_path=${item_path}/.grot/${item_name}.sh
 
-            echo "\$file_path= file://$file_path"
+            # echo "\$file_path= file://$file_path"
 
             if [ -f "$file_path" ] && [ "${item_name:0:1}" != "_" ] && [ "${item##*.}" == "ram" ]; then
                 # echo ". $file_path"
+                echo -e "${GREEN}\$file_path = '$file_path'${NORMAL}"
                 . "$file_path" || {
                     echo "'$FNN() $*' in file://${STL_D_PATH}/.stldrc , line=${LINENO} :: EXEC_FAIL '. file://$file_path' :: return 1" >&2
                     cd "$PPWD" || echo "'$FNN() $*' in fs= file://${STL_D_PATH}/.stldrc , line=${LINENO} , EXEC_FAIL : 'cd $PPWD' : continue" >&2
@@ -126,6 +127,199 @@ dotstldrc_boot_stl() {
         cd "$PPWD" || echo "'$FNN() $*' in fs= file://${STL_D_PATH}/.stldrc , line=${LINENO} , EXEC_FAIL : 'cd $PPWD' : continue" >&2
         return 0
     }
+
+    dotstldrc_wrap_prc_inner() {
+        local FNN=${FUNCNAME[0]}
+        local PPWD=$PWD
+        local ARGS=("$@")
+        local NARGS=$#
+        local verbose=0
+        local estat=
+
+        #* local opt_dir=${STL_DATA_D_PATH}/data.0stl.arb/tst_prc_0stl.ram/.grot/.opt
+        #* local depo_dir=${STL_DATA_D_PATH}/data.0stl.arb/tst_prc_0stl.ram/.grot/.depo
+
+        local fn_sh_grot=${STL_LIB_D_PATH}/lib.0stl.arb/tst_prc_0stl.ram/.grot
+
+        local fn_sh_file="${fn_sh_grot}/tst_prc_0stl.prc"
+        local fn_hie_file="${fn_sh_grot}/tst_prc_0stl.hie"
+        local d_name=$(dirname ${fn_sh_file})
+
+        local opt_dir=${fn_sh_grot}/.opt
+        local opt_lst_dir=${fn_sh_grot}/.opt/.lst
+        local opt_prc_dir=${fn_sh_grot}/.opt/.prc
+        local opt_tml_dir=${fn_sh_grot}/.opt/.tml
+        local depo_dir=${fn_sh_grot}/.depo
+
+        # echo -e "${GREEN}\$usr_fn_data_dir = '$usr_fn_data_dir'${NORMAL}"
+        # echo -e "${GREEN}\$opt_fn_data_dir = '$opt_fn_data_dir'${NORMAL}"
+
+#         echo -e "${CYAN}--- $FNN() $* in file://${fn_sh_file} ---${NORMAL}" #started functions
+
+#         local hint="hint -> "
+#         if [ -n "$2" ] && [ "-h" == "$2" ]; then
+#             echo -e "${CYAN} ${FNN}() help: 
+# MAIN: ${FNN} :: 
+# TAGS:
+# ARGS: [\$1 : ] 
+# [, \$N last arg DEBAG CNTL]
+#     if '_i' debag action, use: [ \$di -eq 1 ] && {debag action} ]
+# GLAR: ${FNN}_glar_[name_glar]    
+# CNTL: 
+#     _go         : _edit body        : _edit file://${d_name}/${FNN}.sh
+#     _tst        : . exec.tst        : . file://${d_name}/_tst/exec.tst
+#     _tst_e      : _edit tst_dir     : _edit file://${d_name}/_tst
+#     _flow_1     : . _flow_tst.sh.v1 : . file://${d_name}/_tst/_flow_tst.sh.v1
+
+#     _hie_m      : more hie_file     : more file://${fn_hie_file} 
+#     _hie_e      : _edit hie_file    : _edit file://${fn_hie_file} 
+
+#     _depo_d_e   : depo data : use by ${FNN} : _edit $depo_dir : _edit file://${depo_dir}
+#     _opt_d_e    : opt data  : use by user   : _edit $opt_dir : _edit file://${opt_dir}    
+    
+# RETURN: ( result>stdout, return 0 | data | change to ptr |  fs_structure | ...)
+# ERROR: ( if ... return 0 | if ... return 1 )
+# EXAM:
+#     ${FNN} 
+# ${NORMAL}"
+#             return 0
+        fi
+        #{help_cntl_fn}
+
+        if [ -n "$2" ] &&  [[ "_go" == "$1" ]]; then
+            _edit "${d_name}/${FNN}".sh
+            return 0
+        fi
+
+        if [ -n "$2" ] && [[ "_tst" == "$1" ]]; then
+            if ! _source_w1_isf ${d_name}/_tst/exec.tst; then
+                _st_exit "in fs= file:// , line=${LINENO}, EXEC: ${FNN} $* : : EXEC_FAIL : '_source_w1_isf ${d_name}/_tst/exec.tst' : ${hint} : return 1"
+                cd $PPWD
+                return 1
+            fi
+        fi
+
+        if [ -n "$2" ] && [[ "_tst_e" == "$1" ]]; then
+            _edit ${d_name}/_tst
+            return 0
+        fi
+
+        if [ -n "$2" ] && [[ "_usr_d_e" == "$1" ]]; then
+            _edit ${usr_fn_data_dir}
+            return 0
+        fi
+
+        if [ -n "$2" ] && [[ "_opt_d_e" == "$1" ]]; then
+            _edit ${opt_fn_data_dir}
+            return 0
+        fi
+
+        if [ -n "$2" ] && [[ "_flow_1" == "$1" ]]; then
+            if ! _source_w1_isf ${d_name}/_tst/_flow_tst.sh.v1; then
+                _st_exit "in fs= file://${fn_sh_file} , line=${LINENO}, EXEC: ${FNN} $* : : EXEC_FAIL : '_source_w1_isf ${d_name}/_tst/_flow_tst.sh.v1' : ${hint} : return 1"
+                cd $PPWD
+                return 1
+            fi
+        fi
+
+        # if [[ "_flow_2" == "$1" ]]; then
+        #     if ! _source_w1_isf ${d_name}/_tst/_flow_tst.sh.v2; then
+        #         _st_exit "in fs= file://${fn_sh_file} , line=${LINENO}, EXEC: ${FNN} $* : : EXEC_FAIL : '_source_w1_isf ${d_name}/_tst/_flow_tst.sh.v2' : ${hint} : return 1"
+        #         cd $PPWD
+        #         return 1
+        #     fi
+        # fi
+
+        if [ -n "$2" ] && [[ "_hie_m" == "$1" ]]; then
+            more ${fn_hie_file}
+            cd $PPWD
+            return 0
+        fi
+
+        if [ -n "$2" ] && [[ "_hie_e" == "$1" ]]; then
+            _edit ${fn_hie_file}
+            cd $PPWD
+            return 0
+        fi
+
+        # hint="\$1: \$2: "
+        # if _isn_from ${NARGS} LESS LESS+1 "in fs= file://${fn_sh_file}, line=${LINENO}, ${FNN}() : DEMAND 'LESS LESS+1' ERR_AMOUNT_ARGS entered :'${NARGS}' args : ${hint} : return 1"; then
+        #     return 1
+        # fi
+
+        #* DEBAG CNTL MAST DEFFINE $N -> ... e.c. [$2]
+        local di=
+        if [ -n "$N" ]; then
+            if [ "$N" == "_i" ]; then
+                di=1
+            else
+                di=0
+            fi
+        else
+            di=0
+        fi
+
+        #[[ptr_path]]
+        #! ptr_path
+        # local ptr_path="$1"
+        # ptr_path="$(_abs_path "${PPWD}" "ptr_path")"
+
+        # _f2d :: insert $1 file after str $2 in ALL (without prevent) file from dir $3
+        # _s2d :: into str $1 insert $2 str in (with prevent) file from dir $3
+        # _s2f :: reciver_string: $1 inserter_string: $2 in reciver_result_file: $3
+        # tml {{PPWD}}
+        # path2nom2d_YYY :: path2nom_YYY for all files (with prev) in dir $1
+        # path2nom_YYY :: _s2f ${PATH} '${REPO_PATH}' $1 : ST_RC_D_PATH, ST_RC_D_DATA_PATH, ST_RC_DATA_PATH, REPO_PATH, HOME
+        # _s2d "$HOME/"" '/' $dir - that only for .md path (before normalize path)
+
+        #* [ $di -eq 1 ] && echo "info"
+
+        #* standart echo fl
+        # _st_exit "in fs= file://${} , line=${LINENO}, EXEC: ${FNN} $* : 'SIGN_STR' (\$N) : 'file://${}' : ${hint} : return 1"
+        # cd "$PPWD" || echo "EXEC_FAIL : 'cd $PPWD' :: return 0|1" >&2
+        # return 1
+
+        #* greeting
+        # [ $di -eq 1 ] && echo -e "${CYAN}--- $FNN() $* in file://${fn_sh_file} ---${NORMAL}" #started functions
+
+        #* errno
+        # cmd arg
+        # errno=$?
+        # return ${errno}
+
+        #* rename args
+
+        #* check cntl
+
+        #* inname cntl
+
+        tst_prc_0stl_before_return() {
+            :
+        }
+
+        echo "exec : '. $1'"
+        . "$1"
+
+        tst_prc_0stl_before_return
+        cd "$PPWD" || echo "in fs= file://${fn_sh_file} , line=${LINENO} , EXEC_FAIL : 'cd $PPWD' : continue" >&2
+        return 0
+
+        #* define local variables
+
+    }
+
+    # dotstldrc_wrap_prc_inner $1
+
+    # local name_function=$(_prs_f -n "$1")
+
+    # type dotstldrc_wrap_prc_inner
+
+    # eval "${name_function}=\$(dotstldrc_wrap_prc_inner \$1)"
+
+    # eval "export ${name_function}"
+
+    # type "${name_function}"
+    # unset dotstldrc_wrap_prc_inner
 
     dotstldrc_arb_prc_up() { # \$1 dir with executable arb
 
@@ -161,15 +355,32 @@ dotstldrc_boot_stl() {
             item_ext="${item##*.}"
             file_path=${item_path}/.grot/${item_name}.prc
 
-            echo "\$file_path= file://$file_path"
+            # echo "\$file_path= file://$file_path"
 
             if [ -f "$file_path" ] && [ "${item_name:0:1}" != "_" ] && [ "${item##*.}" == "ram" ]; then
                 # echo ". $file_path"
-                . "$file_path" || {
-                    echo "'$FNN() $*' in file://${STL_D_PATH}/.stldrc , line=${LINENO} :: EXEC_FAIL '. file://$file_path' :: return 1" >&2
-                    cd "$PPWD" || echo "'$FNN() $*' in fs= file://${STL_D_PATH}/.stldrc , line=${LINENO} , EXEC_FAIL : 'cd $PPWD' : continue" >&2
-                    return 1
-                }
+                # dotstldrc_wrap_prc_inner "$file_path" || {
+                #     #? . "$file_path" || {
+                #     echo "'$FNN() $*' in file://${STL_D_PATH}/.stldrc , line=${LINENO} :: EXEC_FAIL 'dotstldrc_wrap_prc $file_path' :: return 1" >&2
+                #     cd "$PPWD" || echo "'$FNN() $*' in fs= file://${STL_D_PATH}/.stldrc , line=${LINENO} , EXEC_FAIL : 'cd $PPWD' : continue" >&2
+                #     return 1
+                # }
+
+                echo -e "${GREEN}\$file_path = '$file_path'${NORMAL}"
+
+                local name_function=$(_prs_f -n "$file_path")
+
+                echo -e "${GREEN}\$name_function = '$name_function'${NORMAL}"
+
+                # type dotstldrc_wrap_prc_inner
+
+                echo "alias ${name_function}=\"dotstldrc_wrap_prc_inner $file_path\""
+
+                eval "alias ${name_function}=\"dotstldrc_wrap_prc_inner $file_path\""
+
+                # eval "export ${name_function}"
+
+                eval "type ${name_function}"
             fi
         done
 
