--- a/.d/.stl.d/.stldrc
+++ b/.d/.stl.d/.stldrc
@@ -144,54 +144,22 @@ dotstldrc_boot_stl() {
         local fn_hie_file="${fn_sh_grot}/${FNN}.hie"
         local d_name=$(dirname ${fn_sh_file})
 
-        local opt_dir=${fn_sh_grot}/.opt
-        local opt_lst_dir=${fn_sh_grot}/.opt/.lst
-        local opt_prc_dir=${fn_sh_grot}/.opt/.prc
-        local opt_tml_dir=${fn_sh_grot}/.opt/.tml
-        local depo_dir=${fn_sh_grot}/.depo
-
         local sublib_pth=$(dirname $(dirname ${d_name}))
         local sublib_pfx=$(_prs_f -e2 ${sublib_pth})
         local sublib_nm=$(_prs_f -ne ${sublib_pth})
 
-        local d_data=${STL_DATA_D_PATH}/data.${sublib_pfx}.arb/${FNN}.ram
+        local d_data_ram=${STL_DATA_D_PATH}/data.${sublib_pfx}.arb/${FNN}.ram
+        local d_lib_ram=${STL_LIB_D_PATH}/lib.${sublib_pfx}.arb/${FNN}.ram
 
+        local d_data_grot=${d_data_ram}/.grot
+        local d_lib_grot=${d_lib_ram}/.grot
 
+        local d_lib_grot_opt=${d_lib_grot}/.opt
+        local d_lib_grot_opt_lst=${d_lib_grot_opt}.lst
+        local d_lib_grot_opt_prc=${d_lib_grot_opt}.prc
+        local d_lib_grot_opt_tml=${d_lib_grot_opt}.tml
 
-        # echo -e "${GREEN}\$usr_fn_data_dir = '$usr_fn_data_dir'${NORMAL}"
-        # echo -e "${GREEN}\$opt_fn_data_dir = '$opt_fn_data_dir'${NORMAL}"
-
-        #         echo -e "${CYAN}--- $FNN() $* in file://${fn_sh_file} ---${NORMAL}" #started functions
-
-        #         local hint="hint -> "
-        #         if [ -n "$2" ] && [ "-h" == "$2" ]; then
-        #             echo -e "${CYAN} ${FNN}() help:
-        # MAIN: ${FNN} ::
-        # TAGS:
-        # ARGS: [\$1 : ]
-        # [, \$N last arg DEBAG CNTL]
-        #     if '_i' debag action, use: [ \$di -eq 1 ] && {debag action} ]
-        # GLAR: ${FNN}_glar_[name_glar]
-        # CNTL:
-        #     _go         : _edit body        : _edit file://${d_name}/${FNN}.sh
-        #     _tst        : . exec.tst        : . file://${d_name}/_tst/exec.tst
-        #     _tst_e      : _edit tst_dir     : _edit file://${d_name}/_tst
-        #     _flow_1     : . _flow_tst.sh.v1 : . file://${d_name}/_tst/_flow_tst.sh.v1
-
-        #     _hie_m      : more hie_file     : more file://${fn_hie_file}
-        #     _hie_e      : _edit hie_file    : _edit file://${fn_hie_file}
-
-        #     _depo_d_e   : depo data : use by ${FNN} : _edit $depo_dir : _edit file://${depo_dir}
-        #     _opt_d_e    : opt data  : use by user   : _edit $opt_dir : _edit file://${opt_dir}
-
-        # RETURN: ( result>stdout, return 0 | data | change to ptr |  fs_structure | ...)
-        # ERROR: ( if ... return 0 | if ... return 1 )
-        # EXAM:
-        #     ${FNN}
-        # ${NORMAL}"
-        #             return 0
-        # fi
-        #{help_cntl_fn}
+        local d_lib_grot_depo=${d_lib_grot}/.depo
 
         if [ -n "$2" ] && [[ "_go" == "$2" ]]; then
             _edit "${d_name}/${FNN}".sh
@@ -212,19 +180,19 @@ dotstldrc_boot_stl() {
             return 0
         fi
 
-        if [ -n "$2" ] && [[ "_usr_d_e" == "$2" ]]; then
-            _edit ${usr_fn_data_dir}
+        if [ -n "$2" ] && [[ "_depo_d_e" == "$2" ]]; then
+            _edit ${d_lib_grot_depo}
             return 0
         fi
 
         if [ -n "$2" ] && [[ "_opt_d_e" == "$2" ]]; then
-            _edit ${opt_fn_data_dir}
+            _edit $d_lib_grot_opt
             return 0
         fi
 
         if [ -n "$2" ] && [[ "_flow_1" == "$2" ]]; then
-            if ! _source_w1_isf ${d_name}/_tst/_flow_tst.sh.v1; then
-                _st_exit "in fs= file://${fn_sh_file} , line=${LINENO}, EXEC: ${FNN} $* : : EXEC_FAIL : '_source_w1_isf ${d_name}/_tst/_flow_tst.sh.v1' : ${hint} : return 1"
+            if ! . ${d_name}/_tst/_flow_tst.sh.v1; then
+                echo "in fs= file://${fn_sh_file} , line=${LINENO}, EXEC: ${FNN} $* : : EXEC_FAIL : '_source_w1_isf ${d_name}/_tst/_flow_tst.sh.v1' : ${hint} : return 1" >&2
                 cd $PPWD
                 return 1
             fi
@@ -302,18 +270,13 @@ dotstldrc_boot_stl() {
 
         #* inname cntl
 
-        tst_prc_0stl_before_return() {
-            :
-        }
+        # echo "\${ARGS[0]} = '${ARGS[0]}'"
+        # echo "\${ARGS[1]} = '${ARGS[1]}'"
+        # echo "\${ARGS[2]} = '${ARGS[2]}'"
 
-        echo "\${ARGS[0]} = '${ARGS[0]}'"
-        echo "\${ARGS[1]} = '${ARGS[1]}'"
-        echo "\${ARGS[2]} = '${ARGS[2]}'"
-
-        echo "exec : '. ${ARGSW[@]}'"
+        # echo "exec : '. ${ARGSW[@]}'"
         . ${ARGSW[@]}
 
-        tst_prc_0stl_before_return
         cd "$PPWD" || echo "in fs= file://${fn_sh_file} , line=${LINENO} , EXEC_FAIL : 'cd $PPWD' : continue" >&2
         return 0
 
